code clean-up, second step. see bug 2542 note 10082
git-svn-id: https://ncisvn.nci.nih.gov/svn/geworkbench/trunk/geworkbench@8234 8b29bb6e-589a-435a-9a12-3ab907be3462